@@ -64,11 +64,6 @@ public class AdminSearchService {
     // 리뷰로 검색
     public CommonResponseDto<Object> searchReviewInquiry(String keyword, int page, int size, String sortBy) {
 
-        // 관리자 확인
-/*        Member admin = memberRepository.findByMemberIdAndIsDeleted(tokenProvider.getUserId(accessToken))
-                                       .orElseThrow(() -> new NotFoundException(ErrorCode.MEMBER_NOT_FOUND));
-        if (!admin.getRole()
-                  .equals(Role.ADMIN)) throw new BadRequestException(ErrorCode.UNAUTHORIZED_ACCESS);*/
 
         PageRequest pageable = PageRequest.of(page - 1, size, Sort.by(sortBy)
                                                                   .descending());
@@ -76,7 +71,7 @@ public class AdminSearchService {
         Page<Review> reviewSearchPage;
         if (keyword == null || keyword.trim()
                                       .isEmpty()) {
-            reviewSearchPage = reviewRepository.findAllIsDeletedFalse(pageable);
+            reviewSearchPage = reviewRepository.findAll(pageable);
         } else {
             reviewSearchPage = reviewRepository.findAllReviewListBySearch(keyword, pageable);
         }
@@ -91,9 +86,7 @@ public class AdminSearchService {
 
         for (Review review : reviewList) {
 
-            String mainImgPath = review.getReviewImgList()
-                                       .get(0)
-                                       .getImgPath();
+            String mainImgPath = review.getReviewImgList().getFirst().getImgPath();
             String shopName = review.getShop()
                                     .getName();
 
@@ -210,7 +203,7 @@ public class AdminSearchService {
         Page<Shop> shopSearchPage;
         if (keyword == null || keyword.trim()
                                       .isEmpty()) {
-            shopSearchPage = shopRepository.findAllNotDeleted(pageable);
+            shopSearchPage = shopRepository.findAll(pageable);
         } else {
             shopSearchPage = shopRepository.findALlShopListByKeyword(keyword, pageable);
         }
@@ -272,7 +265,7 @@ public class AdminSearchService {
 
     // 회원 검색
 
-    public CommonResponseDto<Object> searchMemberInquiry(String accessToken, String keyword, int page, int size, String sortBy) {
+   /* public CommonResponseDto<Object> searchMemberInquiry(String accessToken, String keyword, int page, int size, String sortBy) {
 
         // 관리자 확인
         Member admin = memberRepository.findByMemberIdAndIsDeleted(tokenProvider.getUserId(accessToken))
@@ -325,6 +318,6 @@ public class AdminSearchService {
 
         return commonService.successResponse(SuccessCode.MEMBER_ALL_INQUIRY_SUCCESS.getDescription(), HttpStatus.OK, memberListResponseDto);
     }
-
+*/
 
 }
